[workspace]
resolver = "2"
members = [
    "scrap-images",
    "bag",
    "overloaded",
    "word-freq",
    "uptime",
    "uptime/config",
    "ticker",
    "ip",
    "evictmap",
    "pretty-xml",
    "unc",
    "logic",
    "qr",
    "xkcd_lock",
    "find_projects",
    "pingwatch",
]

[profile.release.package.pingwatch]
opt-level = "z"
codegen-units = 1
strip = "symbols"

# Opt-in profile for the smallest `pingwatch` binary.
# Usage: cargo build --profile pingwatch-aggressive -p pingwatch
[profile.pingwatch-aggressive]
inherits = "release"
opt-level = "z"
codegen-units = 1
strip = "symbols"
lto = "fat"
panic = "abort"
