[package]
name = "bag"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "1.8.0"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.3"
yadf = { version = "1.0.0", default-features = false }
seahash = "4.1.0"

[[bench]]
name = "bag_from_iter"
harness = false
