[package]
name = "bag"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bag_from_iter"
harness = false

[features]
default = []
serde = ["indexmap/serde", "dep:serde"]

[dependencies]
indexmap = "2.2.6"
serde = { version = "1.0.204", optional = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
yadf = { version = "1.0.0", default-features = false }
seahash = "4.1.0"
