[package]
name = "pingwatch"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
rstest = "0.26"

[dependencies]
anyhow = "1"
ctrlc = "3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
console = "0.16"
indicatif = "0.18"
surge-ping = "0.8"
tokio = { version = "1", features = ["macros", "rt", "sync", "time", "net"] }
