[package]
name = "pingwatch"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pingwatch"
path = "src/main.rs"

[dev-dependencies]
rstest = "0.26"
tempfile = "3"

[build-dependencies]
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.11.27", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.5.11"

[dependencies]
anyhow = "1"
ctrlc = "3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
console = "0.16"
indicatif = "0.18"
surge-ping = "0.8"
tokio = { version = "1", features = ["macros", "rt", "sync", "time", "net"] }
toml_edit = { version = "0.25.11", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
