[package]
name = "pingwatch"
version = "0.1.0"
edition = "2024"

[features]
default = []
animated-spinners = []

[[bin]]
name = "pingwatch"
path = "src/main.rs"

[dev-dependencies]
rstest = "0.26"
tempfile = "3"

[build-dependencies]
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
console = { version = "0.16", default-features = false, features = ["std"] }
indicatif = { version = "0.18", default-features = false }
surge-ping = "0.8"
tokio = { version = "1", features = ["macros", "rt", "signal", "sync", "time", "net"] }
toml_edit = { version = "0.25.11", default-features = false, features = ["parse", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
