[package]
name = "qr"
version = "0.1.0"
edition = "2021"
authors = ["jRimbault <jacques.rimbault@gmail.com"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
env_logger = "0.10.1"
image = "0.24.7"
log = "0.4.20"
open = "5.0.1"
qrcode = "0.13.0"
