[package]
name = "qr"
version = "0.1.0"
edition = "2021"
authors = ["jRimbault <jacques.rimbault@gmail.com"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
image = "0.25.10"
log = "0.4.29"
open = "5.3.3"
qrcode = "0.14.1"
