[package]
name = "scrap_images"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.1.6", features = ["derive"] }
select = "0.5.0"
tokio-stream = "0.1.8"
tokio-util = { version = "0.7.1", features = ["io"] }
urlencoding = "2.1.0"
tracing = "0.1.34"
# serde = { version = "1.0.136", features = ["derive"] }

[dependencies.reqwest]
version = "0.11.10"
features = ["blocking", "stream"]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "fs", "rt-multi-thread"]

[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["json", "env-filter"]
