[package]
name = "scrap_images"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
select = "0.6.1"
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }
urlencoding = "2.1.3"
tracing = "0.1.44"
# serde = { version = "1.0.136", features = ["derive"] }

[dependencies.reqwest]
version = "0.13.2"
features = ["blocking", "stream"]

[dependencies.tokio]
version = "1.51.1"
features = ["macros", "fs", "rt-multi-thread"]

[dependencies.tracing-subscriber]
version = "0.3.23"
features = ["json", "env-filter"]
