[package]
name = "xkcd_lock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
env_logger = "0.11.10"
log = "0.4.29"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
textwrap = "0.16.2"
ureq = { version = "3.3.0", features = ["json"] }
url = { version = "2.5.8", features = ["serde"] }
